--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="my personal GitHub site">
+        <meta name="description" content="My GitHub user site">
         <meta name="author" content="Manfred Rosenboom (maroph)">
         <link rel="canonical" href="https://maroph.github.io/">
         <link rel="shortcut icon" href="img/favicon.ico">
@@ -93,6 +93,7 @@
 
         <footer class="col-md-12">
             <hr>
+                <p>(c) 2020 Manfred Rosenboom (maroph)</p>
             <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
         </footer>
         <script>
@@ -171,5 +172,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-12-20 08:11:09
+Build Date UTC : 2020-04-25 07:59:31
 -->
