--- a/info/index.html
+++ b/info/index.html
@@ -93,6 +93,7 @@
 
         <footer class="col-md-12">
             <hr>
+                <p>(c) 2020 Manfred Rosenboom (maroph)</p>
             <p>Documentation built with <a href="https://www.mkdocs.org/">MkDocs</a>.</p>
         </footer>
         <script>
