--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="/info/">About</a>
+    <a href="/info/about/">About</a>
 </li>
                                     
 <li >
@@ -65,6 +65,9 @@
                                 <i class="fa fa-search"></i> Search
                             </a>
                         </li>
+                            <li>
+                                <a href="https://github.com/maroph/maroph.github.io/"><i class="fa fa-github"></i> GitHub</a>
+                            </li>
                     </ul>
                 </div>
             </div>
