--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="info/">About</a>
+    <a href="info/about/">About</a>
 </li>
                                     
 <li >
@@ -71,9 +71,12 @@
                                 </a>
                             </li>
                             <li >
-                                <a rel="prev" href="info/">
+                                <a rel="prev" href="info/about/">
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/maroph/maroph.github.io/"><i class="fa fa-github"></i> GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -172,5 +175,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-04-25 07:59:31
+Build Date UTC : 2020-04-26 10:40:20
 -->
