--- a/info/license/index.html
+++ b/info/license/index.html
@@ -49,7 +49,7 @@
                                 <ul class="dropdown-menu">
                                     
 <li >
-    <a href="../">About</a>
+    <a href="../about/">About</a>
 </li>
                                     
 <li class="active">
@@ -66,7 +66,7 @@
                             </a>
                         </li>
                             <li >
-                                <a rel="next" href="../">
+                                <a rel="next" href="../about/">
                                     <i class="fa fa-arrow-left"></i> Previous
                                 </a>
                             </li>
@@ -74,6 +74,9 @@
                                 <a rel="prev" >
                                     Next <i class="fa fa-arrow-right"></i>
                                 </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/maroph/maroph.github.io/"><i class="fa fa-github"></i> GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -89,27 +92,9 @@
                 <div class="col-md-9" role="main">
 
 <h1 id="license">License</h1>
-<p><a href="https://choosealicense.com/licenses/mit/">MIT License</a></p>
-<pre><code>Copyright (c) 2019 Manfred Rosenboom (maroph)
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE.
-</code></pre></div>
+<p><img alt="GIYF" src="https://i.creativecommons.org/l/by/4.0/88x31.png" />
+This work is licensed under a 
+<a href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a></p></div>
         </div>
 
         <footer class="col-md-12">
