mkdocs.yml: adapt edit_uri to my project structure

--- a/info/license/index.html
+++ b/info/license/index.html
@@ -76,7 +76,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/maroph/maroph.github.io/"><i class="fa fa-github"></i> GitHub</a>
+                                <a href="https://github.com/maroph/maroph.github.io/edit/master/mkdocs/docs-src/info/license.md"><i class="fa fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
