--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="https://github.com/maroph/maroph.github.io/"><i class="fa fa-github"></i> GitHub</a>
+                                <a href="https://github.com/maroph/maroph.github.io/edit/master/mkdocs/docs-src/index.md"><i class="fa fa-github"></i> Edit on GitHub</a>
                             </li>
                     </ul>
                 </div>
@@ -175,5 +175,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-04-26 10:40:20
+Build Date UTC : 2020-04-26 11:03:38
 -->
